# zoomme

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc  zoomme.pro  zoomwidget.cpp  zoomwidget.hpp  zoomwidget.ui
resources/: Icon.xcf
